@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-11T16:41:33Z",
-  "count" : 3,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2022-07-12T02:27:08Z",
+  "count" : 4,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
