@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-11T16:41:33Z",
-  "count_outdated" : 232,
-  "uniques_outdated" : 111,
-  "count" : 259,
+  "timestamp" : "2022-07-12T02:27:08Z",
+  "count_outdated" : 234,
+  "uniques_outdated" : 112,
+  "count" : 261,
   "uniques" : 127,
   "clones" : [
-    {
-      "timestamp": "2022-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
